@@ -1,3 +1,7 @@
+2003-01-21  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* gkb.[ch], keygrab.c: fix for problems while setting a hotkey #104043
+
 2003-03-11  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>
 
 	* gkb.c: Don't revert to default keymap while exiting.
